--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                         <h4 class="card-title">Lista de Atividades</h4>
                         <form class="add-items d-flex" action="">
                             <input type="text" class="form-control todo-list-input"
-                                placeholder="O que você precisa fazer hoje?">
-                            <button class="dd btn btn-primary font-weight-bold todo-list-add-btn"> + </button>
+                                placeholder="O que você precisa fazer hoje?" data-form-input>
+                            <button class="dd btn btn-primary font-weight-bold todo-list-add-btn" data-form-button> + </button>
                         </form>
                         <div class="list-wrapper">
                             <ul class="d-flex flex-column-reverse todo-list">
                                 <li>
-                                    <label class="form-check-label">
+                                    <label class="form-check-label" data-task>
                                         - Fazer tarefa de português.
                                     </label>
                                 </li>
@@ -40,6 +40,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="arquivo.js"></script>
 </body>
 
 </html>
