--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
                         <form class="add-items d-flex" action="">
                             <input type="text" class="form-control todo-list-input"
                                 placeholder="O que você precisa fazer hoje?" data-form-input>
-                            <button class="dd btn btn-primary font-weight-bold todo-list-add-btn" data-form-button> + </button>
+                            <button class="dd btn btn-primary font-weight-bold todo-list-add-btn" data-form-button> +
+                            </button>
                         </form>
                         <div class="list-wrapper">
                             <ul class="d-flex flex-column-reverse todo-list">
                                 <li>
                                     <label class="form-check-label" data-task>
                                         - Fazer tarefa de português.
+                                        <span class="close">x</span>
                                     </label>
                                 </li>
                             </ul>
