--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         </form>
                         <div class="list-wrapper">
                             <ul class="d-flex flex-column-reverse todo-list">
-                                <li>
-                                    <label class="form-check-label" data-task>
-                                        - Fazer tarefa de português.
-                                        <span class="close">x</span>
+                                <li class="lista_atividades">
+                                    <input type="checkbox" class="form-check-input">
+                                    <label class="form-check-label" data-task>- Fazer tarefa de português.
+                                    <span class="close">x</span>
                                     </label>
                                 </li>
                             </ul>
