--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
                             </button>
                         </form>
                         <div class="list-wrapper">
-                            <ul class="d-flex flex-column-reverse todo-list">
-                                <li class="lista_atividades">
+                            <ul class="d-flex flex-column-reverse todo-list lista_atividades" data-task>
+                                <li>
                                     <input type="checkbox" class="form-check-input">
-                                    <label class="form-check-label" data-task>- Fazer tarefa de português.
+                                    <label class="form-check-label">- Fazer tarefa de português.</label>
                                     <span class="close">x</span>
-                                    </label>
                                 </li>
                             </ul>
                         </div>
