--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="page-content page-container padding" id="page-content">
+    <div class="page-content page-container padding" id="page-content"> <!--teste-->
         <div class="row container d-flex justify-content-center">
             <div class="col-md-12">
                 <div class="card px-3">
@@ -29,8 +29,6 @@
                         </form>
                         <div class="list-wrapper">
                             <ul class="d-flex flex-column-reverse todo-list lista_atividades" data-task>
-                                <li>
-                                </li>
                             </ul>
                         </div>
                     </div>
